--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
     <body>
         <div id="header" class="container" data-sr="scale down 10%, over 3s">
             <div class="header-wrapper">
-                <a href="/"><img src="../images/header.png" alt="" /></a>
+                <a href="/"><img src="images/header.png" alt="" /></a>
             </div>
         </div>
         <div id="navmenu" class="navmenu-shop">
@@ -62,7 +62,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                           </button>
-                          <a class="navbar-brand" href="/"><img src="../images/header.png" alt="" /></a>
+                          <a class="navbar-brand" href="/"><img src="images/header.png" alt="" /></a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,12 +78,12 @@
                     </nav>
 
                 <div class="line">
-                    <img src="../images/stripe.png" alt="" />
+                    <img src="images/stripe.png" alt="" />
                 </div>
 
                 <div class="nav-featured col-md-12">
                     <div class="nav-featured-wrapper">
-                        <img src="../images/header-featured.jpg" alt=""
+                        <img src="images/header-featured.jpg" alt=""
                         data-0="position:relative; top:0px"
                         data-560="position:relative; top:-200px"/>
 
@@ -190,7 +190,7 @@
         <div id="footer">
             <div id="footer-wrapper" class="container">
                 <div class="line">
-                    <img src="../images/stripe.png" alt="" />
+                    <img src="images/stripe.png" alt="" />
                 </div>
                 <div id="right-footer" class="col-md-5 col-md-push-7">
                     <div id="email">
@@ -214,16 +214,16 @@
                     <div id="social-network">
                         <div id="social-network-wrapper" class="row">
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/email-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/email-icon.png" alt="" /></a>
                             </div>
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/fb-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/fb-icon.png" alt="" /></a>
                             </div>
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/instagram-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/instagram-icon.png" alt="" /></a>
                             </div>
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/twitter-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/twitter-icon.png" alt="" /></a>
                             </div>
                         </div>
 
