--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <div id="header" class="container" data-sr="scale down 10%, over 3s">
             <div class="header-wrapper">
-                <a href="/"><img src="../images/header.png" alt="" /></a>
+                <a href="/"><img src="images/header.png" alt="" /></a>
             </div>
         </div>
         <div id="navmenu" class="navmenu-shop">
@@ -62,7 +62,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                           </button>
-                          <a class="navbar-brand" href="/"><img src="../images/header.png" alt="" /></a>
+                          <a class="navbar-brand" href="/"><img src="images/header.png" alt="" /></a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,12 +78,12 @@
                     </nav>
 
                 <div class="line">
-                    <img src="../images/stripe.png" alt="" />
+                    <img src="images/stripe.png" alt="" />
                 </div>
 
                 <div class="nav-featured col-md-12">
                     <div class="nav-featured-wrapper">
-                        <img src="../images/header-featured.jpg" alt=""
+                        <img src="images/header-featured.jpg" alt=""
                         data-0="position:relative; top:0px"
                         data-560="position:relative; top:-200px"/>
 
@@ -101,7 +101,7 @@
                     <div id="content-1" class="menu col-md-4">
                         <div class="menu-wrapper content-1-wrapper">
                             <div id="image-left" class="image-wrapper">
-                                <img src="../images/img-left.jpg" alt="" />
+                                <img src="images/img-left.jpg" alt="" />
                             </div>
                             <div id="caption-left" class="caption-wrapper">
                                 <div class="caption-inner-wrapper">
@@ -114,7 +114,7 @@
                     <div id="content-2" class="menu col-md-4">
                         <div class="menu-wrapper content-2-wrapper">
                             <div id="image-middle">
-                                <img src="../images/img-mid.jpg" alt="" />
+                                <img src="images/img-mid.jpg" alt="" />
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                                 </div>
                             </div>
                             <div id="image-right" class="image-wrapper">
-                                <img src="../images/img-left.jpg" alt=""/>
+                                <img src="images/img-left.jpg" alt=""/>
                             </div>
                         </div>
 
@@ -143,7 +143,7 @@
         <div id="footer">
             <div id="footer-wrapper" class="container">
                 <div class="line">
-                    <img src="../images/stripe.png" alt="" />
+                    <img src="images/stripe.png" alt="" />
                 </div>
                 <div id="right-footer" class="col-md-5 col-md-push-7">
                     <div id="email">
@@ -167,16 +167,16 @@
                     <div id="social-network">
                         <div id="social-network-wrapper" class="row">
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/email-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/email-icon.png" alt="" /></a>
                             </div>
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/fb-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/fb-icon.png" alt="" /></a>
                             </div>
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/instagram-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/instagram-icon.png" alt="" /></a>
                             </div>
                             <div class="social-icon col-xs-3">
-                                <a href="#"><img src="../images/twitter-icon.png" alt="" /></a>
+                                <a href="#"><img src="images/twitter-icon.png" alt="" /></a>
                             </div>
                         </div>
 
