fix home url again

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <body>
         <div id="header" class="container" data-sr="scale down 10%, over 3s">
             <div class="header-wrapper">
-                <a href="index.html"><img src="images/header.png" alt="" /></a>
+                <a href="./"><img src="images/header.png" alt="" /></a>
             </div>
         </div>
         <div id="navmenu" class="navmenu-shop">
             <div class="nav-wrapper container">
 
                 <div class="nav-button col-sm-3 col-md-3">
-                    <a href="index.html"><div class="navbutton-wrapper">
+                    <a href="./"><div class="navbutton-wrapper">
                         HOME
                     </div></a>
 
@@ -62,13 +62,13 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                           </button>
-                          <a class="navbar-brand" href="index.html"><img src="images/header.png" alt="" /></a>
+                          <a class="navbar-brand" href="./"><img src="images/header.png" alt="" /></a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse-menu collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                           <ul class="nav navbar-nav">
-                            <li class="navmenu active"><a href="index.html">HOME<span class="sr-only">(current)</span></a></li>
+                            <li class="navmenu active"><a href="./">HOME<span class="sr-only">(current)</span></a></li>
                             <li class="navmenu"><a href="#">NEW</a></li>
                             <li class="navmenu"><a href="shop.html">SHOP</a></li>
                             <li class="navmenu"><a href="#">BLOG</a></li>
